TEST_PROGRAMS/VALID/remi_bernard/prime.min
# Check if a given number p is prime
var n: int;
var p: int;

print "Enter a number to check for primality";
read p;

n = 2;
while p - (p / n) * n do
	n = n + 1;
done

if n - p then
	print "Composite";
else
	print "Prime";
endif

