TEST_PROGRAMS/INVALID/armin_taheri/invalid3.min
# if is not a statement 
var x: int;

x = 1;

if x then
	print "true";
else
	print "false";
endif;

